fix blockquote truncation
closes #968

--- a/src/FilterLists.Web/src/components/listsTable/listsTable.css
+++ b/src/FilterLists.Web/src/components/listsTable/listsTable.css
@@ -1,3 +1,7 @@
 .ant-table-header-column > div {
   margin-top: 8px;
 }
+
+tr blockquote {
+  word-break: break-word;
+}
